Added player module

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <div class="panel" id="leftPanel">
-        <div class="playerNames" id="firstPlayerName">Player 1: </div>
-        <div class="playerNames" id="secondPlayerName">Player 2: </div>
+        <h2>Players: </h2>
+        <div class="playerNames" id="firstPlayerName">Player X: </div>
+        <div class="playerNames" id="secondPlayerName">Player O: </div>
         <button id="editNamesButton">Edit Names</button>
     </div>
 
