worked on board event listeners.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div class="panel" id="middlePanel">
         <h1>Tic Tac Toe</h1>
         <div class="board">
-            <div class="square" id="topLeftSq">X</div>
-            <div class="square" id="topCenterSq">O</div>
-            <div class="square" id="topRightSq">X</div>
-            <div class="square" id="midLeftSq">X</div>
-            <div class="square" id="midCenterSq">O</div>
-            <div class="square" id="midRightSq">X</div>
-            <div class="square" id="botLeftSq">O</div>
+            <div class="square" id="topLeftSq">T</div>
+            <div class="square" id="topCenterSq">I</div>
+            <div class="square" id="topRightSq">C</div>
+            <div class="square" id="midLeftSq">T</div>
+            <div class="square" id="midCenterSq">A</div>
+            <div class="square" id="midRightSq">C</div>
+            <div class="square" id="botLeftSq">T</div>
             <div class="square" id="botCenterSq">O</div>
-            <div class="square" id="botRightSq">X</div>
+            <div class="square" id="botRightSq">E</div>
         </div>
     </div>
 
