changed board to an array, changed boardModule accordingly. Removed square divs from html. Generated new divs from board array.

--- a/index.html
+++ b/index.html
@@ -14,21 +14,12 @@
         <h2>Players: </h2>
         <div class="playerNames" id="firstPlayerName">Player X: </div>
         <div class="playerNames" id="secondPlayerName">Player O: </div>
-        <button id="editNamesButton">Edit Names</button>
+        <button id="editNamesButton">New Players</button>
     </div>
 
     <div class="panel" id="middlePanel">
         <h1>Tic Tac Toe</h1>
         <div class="board">
-            <div class="square" id="topLeftSq">T</div>
-            <div class="square" id="topCenterSq">I</div>
-            <div class="square" id="topRightSq">C</div>
-            <div class="square" id="midLeftSq">T</div>
-            <div class="square" id="midCenterSq">A</div>
-            <div class="square" id="midRightSq">C</div>
-            <div class="square" id="botLeftSq">T</div>
-            <div class="square" id="botCenterSq">O</div>
-            <div class="square" id="botRightSq">E</div>
         </div>
     </div>
 
@@ -37,5 +28,6 @@
         <div class="resultsContainer"></div>
         <button id="startNewGameButton">Start New Game</button>
     </div>
+
 </body>
 </html>
