finished project, did not add AI

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="panel" id="leftPanel">
         <h2>Players: </h2>
-        <div class="playerNames" id="firstPlayerName">Player X: </div>
-        <div class="playerNames" id="secondPlayerName">Player O: </div>
+        <div class="playerNames" id="firstPlayerName">X: Player 1</div>
+        <div class="playerNames" id="secondPlayerName">O: Player 2 </div>
         <button id="editNamesButton">New Players</button>
     </div>
 
